--- a/website/content/assignment/01-lab.Rmd
+++ b/website/content/assignment/01-lab.Rmd
@@ -45,29 +45,8 @@ This should tell you what version of R you are currently using. If your R versio
 
 ## 1.2 Download RStudio
 
-We recommend using RStudio as your IDE if you don't already have it installed. You can go to the [RStudio](https://rstudio.com/products/rstudio/download/) website to download and install the software.
+We recommend using RStudio as your IDE if you don't already have it installed. You can go to the [RStudio](https://rstudio.com/products/rstudio/download/) website to download and install the software. Once it is installed, open RStudio and use it to complete the rest of this lab.
 
-## 1.3 Launch RStudio
-
-You have 2 ways to open the lab project we will be working with. Inside the folder is a `pm566-01-lab.Rproj` file, opening this file should launch your RStudio project.
-
-You can also open the RStudio application first and then open the project by going `file -> open project...`
-
-## Start a new Project
-
-RStudio Projects are a great way to stay organized and keep all of your work on a particular topic in one place. Project files keep track of things like the R objects you are using and which files you have open, so that you can quickly jump in and out of different work environments.
-
-In the top right of the RStudio window, you should see a drop-down menu that says "Project: (None)". Click on this and then "New Project...", which will open up a dialogue box. If you have already created a directory (folder) for you Lab 1 materials, you can associate this Project with an existing directory, otherwise use the dialogue box to create a new directory. We'll use the generic Project type, "New Project". Then give it a name like "Lab 1", choose where you want to save it on your computer, and click "Create Project". Now in the top right, you should see "Lab 1" next to the R Project logo.
-
-## Create a Quarto document
-
-We will use Quarto documents a lot in this course because they are reproducible and allow us to seamlessly integrate code and text.
-
-In the top left, you will see a "New File" icon that leads to a drop-down menu. Click on this and then "Quarto document...", which will open up a dialogue box. You can leave most of the settings on their defaults for now, just give your document a title and author (yourself) and click "Create". RStudio may ask you if you would like to install a package that is required, and if so, click "Install".
-
-This will open the default Quarto document, which already contains some example content. Read through it, then remove this content and set up new sections titled "Question 1" through "Question 5". Under each section title, add an R code chunk via "Insert...", "Executable Cell", "R". This document will serve as the template for your responses to this lab.
-
-Save your Quarto markdown (`qmd`) file as `lab-01-hello-r.qmd` and see what happens when you click "Render".
 
 # Hello RStudio!
 
@@ -86,6 +65,24 @@ RStudio is comprised of four panes.
 - If you click on a file, it will open in the editor, on the top left pane.
 
 - Finally, the top right pane shows your Environment. If you define a variable it would show up there. Try typing `x <- 2` in the Console and hit enter, what do you get in the Environment pane?
+
+
+## Start a new Project
+
+RStudio Projects are a great way to stay organized and keep all of your work on a particular topic in one place. Project files keep track of things like the R objects you are using and which files you have open, so that you can quickly jump in and out of different work environments.
+
+In the top right of the RStudio window, you should see a drop-down menu that says "Project: (None)". Click on this and then "New Project...", which will open up a dialogue box. If you have already created a directory (folder) for you Lab 1 materials, you can associate this Project with an existing directory, otherwise use the dialogue box to create a new directory. We'll use the generic Project type, "New Project". Then give it a name like "Lab 1", choose where you want to save it on your computer, and click "Create Project". Now in the top right, you should see "Lab 1" next to the R Project logo.
+
+## Create a Quarto document
+
+We will use Quarto documents a lot in this course because they are reproducible and allow us to seamlessly integrate code and text.
+
+In the top left, you will see a "New File" icon that leads to a drop-down menu. Click on this and then "Quarto document...", which will open up a dialogue box. You can leave most of the settings on their defaults for now, just give your document a title and author (yourself) and click "Create". RStudio may ask you if you would like to install a package that is required, and if so, click "Install".
+
+This will open the default Quarto document, which already contains some example content. Read through it, then remove this content and set up new sections titled "Question 1" through "Question 5". Under each section title, add an R code chunk via "Insert...", "Executable Cell", "R". This document will serve as the template for your responses to this lab.
+
+Save your Quarto markdown (`qmd`) file as `lab-01-hello-r.qmd` and see what happens when you click "Render".
+
 
 # Packages
 
