changed hw1 due date

--- a/website/content/assignment/03-hw1.Rmd
+++ b/website/content/assignment/03-hw1.Rmd
@@ -7,7 +7,7 @@ date: 2023-09-08
 
 # Due Date
 
-This assignment is due by midnight Pacific Time, September 22nd, 2023.
+This assignment is due by midnight Pacific Time, September 29th, 2023.
 
 # Learning Goals
 - Download, read, and get familiar with an external dataset. 
