updated hw4 and clarified requirements for final.

--- a/website/content/assignment/11-hw4.md
+++ b/website/content/assignment/11-hw4.md
@@ -8,12 +8,12 @@ date: 2022-11-10
 
 This assignment is due by midnight Pacific Time, November 17th, 2023.
 
-The learning objectives are to conduct data scraping and perform text mining.
+The learning objectives are to write faster code for computational task requiring a loop and to implement some queries and basic data wrangling in SQL.
 
 ## HPC
 
-### Problem  1: Make things run faster
-Rewrite the following R functions to make them faster. It is OK (and recommended) to take a look at Stackoverflow and Google
+### Make things run faster
+Rewrite the following R functions to make them faster. It is OK (and recommended) to take a look at StackOverflow and Google
 
 
 ```r
@@ -47,8 +47,13 @@ fun2 <- function(mat) {
 fun2alt <- function(mat) {
   # YOUR CODE HERE
 }
+```
+
+### Question 1
+Using the dataset generated below (`dat`), check that the output of both of your new functions matches the output of the original functions. Then use `microbenchmark` to check that your version is actually faster.
 
 
+```r
 # Use the data with this code
 set.seed(2315)
 dat <- matrix(rnorm(200 * 100), nrow = 200)
@@ -56,19 +61,18 @@ dat <- matrix(rnorm(200 * 100), nrow = 200)
 # Test for the first
 microbenchmark::microbenchmark(
   fun1(dat),
-  fun1alt(dat), unit = "relative", check = "equivalent"
+  fun1alt(dat), unit = "relative"
 )
 
 # Test for the second
 microbenchmark::microbenchmark(
   fun2(dat),
-  fun2alt(dat), unit = "relative", check = "equivalent"
+  fun2alt(dat), unit = "relative"
 )
 ```
 
-The last argument, `check = “equivalent”`, is included to make sure that the functions return the same result.
 
-### Problem 2: Make things run faster with parallel computing
+### Make things run faster with parallel computing
 
 The following function allows simulating pi:
 
@@ -96,7 +100,8 @@ system.time({
 })
 ```
 
-Rewrite the previous code using `parLapply()` to make it run faster. Make sure you set the seed using `clusterSetRNGStream()`:
+### Question 2
+Rewrite the previous code using `parLapply()` (or your parallelization method of choice) to parallelize it. Run the code once, using `system.time()`, to show that your version is faster.
 
 
 ```r
@@ -134,20 +139,20 @@ dbWriteTable(con, "film_category", film_category)
 dbWriteTable(con, "category", category)
 ```
 
-When you write a new chunk, remember to replace the `r` with `sql, connection=con`. Some of these questions will reqruire you to use an  inner join. Read more about them here https://www.w3schools.com/sql/sql_join_inner.asp
-
-## Question 1
-
-How many many movies are avaliable in each `rating` catagory?
-
-## Question 2
-
-What is the average replacement cost and rental rate for each `rating` category?
+When you write a new chunk, remember to replace the `r` with `sql, connection=con`. Some of these questions will require you to use an inner join. Read more about them here https://www.w3schools.com/sql/sql_join_inner.asp
 
 ## Question 3
 
-Use table `film_category` together with `film` to find how many films there are with each category ID.
+How many many movies are available in each `rating` category?
 
 ## Question 4
 
-Incorporate table `category` into the answer to the previous question to find the name of the most popular category.
+What is the average replacement cost and rental rate for each `rating` category?
+
+## Question 5
+
+Use table `film_category` together with `film` to find how many films there are with each category ID.
+
+## Question 6
+
+Incorporate the `category` table into the answer to the previous question to find the name of the most popular category.
