updated dates on assignments for 2024

--- a/website/content/assignment/09-hw3.Rmd
+++ b/website/content/assignment/09-hw3.Rmd
@@ -2,12 +2,12 @@
 title: "Assignment 03 - Text Mining"
 output: tufte::tufte_html
 link-citations: yes
-date: 2023-11-03
+date: 2024-10-25
 ---
 
 ## Due Date
 
-This assignment is due by midnight Pacific Time, November 3rd, 2023. 
+This assignment is due by midnight Pacific Time, November 8th, 2024. 
 
 ## Text Mining
 
