--- a/website/content/assignment/11-hw4.md
+++ b/website/content/assignment/11-hw4.md
@@ -1,12 +1,12 @@
 ---
 title: "Assignment 04 - HPC and SQL"
 output: tufte::tufte_html
-date: 2022-11-17
+date: 2024-11-08
 ---
 
 ## Due Date
 
-This assignment is due by midnight Pacific Time, November 17th, 2023.
+This assignment is due by midnight Pacific Time, November 22nd, 2024.
 
 The learning objectives are to write faster code for computational task requiring a loop and to implement some queries and basic data wrangling in SQL.
 
@@ -16,7 +16,7 @@ The learning objectives are to write faster code for computational task requirin
 Rewrite the following R functions to make them faster. It is OK (and recommended) to take a look at StackOverflow and Google
 
 
-```r
+``` r
 # Total row sums
 fun1 <- function(mat) {
   n <- nrow(mat)
@@ -53,7 +53,7 @@ fun2alt <- function(mat) {
 Using the dataset generated below (`dat`), check that the output of both of your new functions matches the output of the original functions. Then use `microbenchmark` to check that your version is actually faster.
 
 
-```r
+``` r
 # Use the data with this code
 set.seed(2315)
 dat <- matrix(rnorm(200 * 100), nrow = 200)
@@ -77,7 +77,7 @@ microbenchmark::microbenchmark(
 The following function allows simulating pi:
 
 
-```r
+``` r
 sim_pi <- function(n = 1000, i = NULL) {
   p <- matrix(runif(n*2), ncol = 2)
   mean(rowSums(p^2) < 1) * 4
@@ -91,7 +91,7 @@ sim_pi(1000) # 3.132
 In order to get accurate estimates, we can run this function multiple times, with the following code:
 
 
-```r
+``` r
 # This runs the simulation a 4,000 times, each with 10,000 points
 set.seed(1231)
 system.time({
@@ -104,7 +104,7 @@ system.time({
 Rewrite the previous code using `parLapply()` (or your parallelization method of choice) to parallelize it. Run the code once, using `system.time()`, to show that your version is faster.
 
 
-```r
+``` r
 # YOUR CODE HERE
 system.time({
   # YOUR CODE HERE
@@ -119,7 +119,7 @@ system.time({
 Setup a temporary database by running the following chunk
 
 
-```r
+``` r
 # install.packages(c("RSQLite", "DBI"))
 
 library(RSQLite)
